Fix broken css bugs introduced

--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -23,13 +23,14 @@ h3 {
 #content {
 	display: block;
 	overflow: auto;
-	height: 100%
+	height: 100%;
+  width: 100%;
 }
 
 #canvas {
 	padding-top: 15px;
     padding-bottom: 15px;
-    overflow: auto;
+    height: fit-content;
 }
 
 .border-top { border-top: 1px solid #e5e5e5; }
